--- a/force-app/main/default/lwc/stoMessagingContainer/stoMessagingContainer.html
+++ b/force-app/main/default/lwc/stoMessagingContainer/stoMessagingContainer.html
@@ -135,7 +135,7 @@
                         <lightning-flow
                             flow-api-name="Case_STO_Complete_v_2"
                             flow-input-variables={inputVariables}
-                            onstatuschange={handleSubmitStatusChange}
+                            onstatuschange={handleFlowStatusChange}
                         >
                         </lightning-flow>
                     </lightning-card>
