Update error text

--- a/force-app/main/default/lwc/nksViewThread/nksViewThread.html
+++ b/force-app/main/default/lwc/nksViewThread/nksViewThread.html
@@ -5,7 +5,7 @@
                 <c-crm-community-alert-stripe
                     class="alertbox"
                     type="feil"
-                    alerttext="Vi har tekniske problemer med tjenesten og feilretting pågår. Du har kun mulighet til å lese innholdet i din innboks på nåværende tidspunkt. Dersom du har behov for å gi viktig informasjon til NAV vedrørende din sak, ring oss på 5555 3333 i vår åpningstid mellom 09:00 og 15:00."
+                    alerttext="Vi har tekniske problemer med tjenesten og jobber med feilretting. Du vil ikke ha mulighet til å svare på meldinger i din innboks nå. Hvis du har behov for å gi viktig informasjon om din sak, ring oss på 55 55 33 33 i vår åpningstid mellom 0900 og 1500."
                 ></c-crm-community-alert-stripe>
             </div>
         </div>
