--- a/force-app/main/default/lwc/stoMessagingContainer/stoMessagingContainer.html
+++ b/force-app/main/default/lwc/stoMessagingContainer/stoMessagingContainer.html
@@ -87,7 +87,7 @@
                     <div class="slds-var-m-top_xx-small">
                         <lightning-card>
                             <lightning-flow
-                                flow-api-name={redactFlowName}
+                                flow-api-name="Case_STO_Redact_v_2"
                                 flow-input-variables={inputVariables}
                                 onstatuschange={handleFlowStatusChange}
                             >
@@ -143,7 +143,7 @@
                 <template lwc:elseif={showCreateNavTask}>
                     <lightning-card>
                         <lightning-flow
-                            flow-api-name={createNavTaskFlowName}
+                            flow-api-name="Case_STO_Send_NAV_Task_v_2"
                             flow-input-variables={inputVariables}
                             onstatuschange={handleFlowStatusChange}
                         >
@@ -153,7 +153,7 @@
                 <template lwc:elseif={showJournal}>
                     <lightning-card>
                         <lightning-flow
-                            flow-api-name={journalFlowName}
+                            flow-api-name="Case_STO_Journal_v_2"
                             flow-input-variables={inputVariables}
                             onstatuschange={handleFlowStatusChange}
                         >
