removed extra padding

--- a/force-app/main/default/lwc/stoMessagingContainer/stoMessagingContainer.html
+++ b/force-app/main/default/lwc/stoMessagingContainer/stoMessagingContainer.html
@@ -35,7 +35,7 @@
                             ></lightning-button>
                         </template>
                     </lightning-layout-item>
-                    <lightning-layout-item class="slds-size_4-of-12 slds-var-p-right_small">
+                    <lightning-layout-item class="slds-size_4-of-12">
                         <lightning-button
                             class="redactButton"
                             label={labels.setToRedaction}
