--- a/force-app/main/default/lwc/crmStoMessaging/oldDesignTemplate.html
+++ b/force-app/main/default/lwc/crmStoMessaging/oldDesignTemplate.html
@@ -12,13 +12,13 @@
         show-quick
     >
         <c-crm-sto-messaging-toolbar slot="toolbar" object-api-name={objectApiName}></c-crm-sto-messaging-toolbar>
-        <template if:true={showMedskrivBlocker}>
+        <template lwc:if={showMedskrivBlocker}>
             <div slot="messages">
                 <div class="slds-align_absolute-center slds-grid_vertical medskrivBlocker scroller">
-                    <p class="slds-text-body_regular slds-m-bottom_small">Brukeren har ikke samtykket til medskriv</p>
+                    <p class="slds-text-body_regular slds-var-m-bottom_small">{labels.MEDSKRIV_TEXT}</p>
                     <lightning-button
                         variant="brand"
-                        label="Vis melding"
+                        label={labels.MEDSKRIV_LABEL}
                         onclick={handleMedskrivClick}
                     ></lightning-button>
                 </div>
