--- a/force-app/main/default/lwc/stoMessagingContainer/stoMessagingContainer.html
+++ b/force-app/main/default/lwc/stoMessagingContainer/stoMessagingContainer.html
@@ -3,202 +3,78 @@
         <lightning-layout class="slds-var-p-bottom_medium slds-border_bottom border" multiple-rows="true" size="12">
             <lightning-layout-item class="slds-size_12-of-12">
                 <lightning-layout>
-                    <lightning-layout-item class="slds-size_4-of-12 slds-var-p-right_small">
-                        <lightning-button
-                            class="button"
-                            label={labels.reserve}
-                            variant="brand"
-                            onclick={toggleFlow}
-                            disabled={reserveDisabled}
-                            aria-expanded={reserveExpanded}
-                        ></lightning-button>
-                    </lightning-layout-item>
-                    <lightning-layout-item class="slds-size_4-of-12 slds-var-p-right_small">
-                        <template lwc:if={isThread}>
+                    <template for:each={topButtonConfigs} for:item="config">
+                        <lightning-layout-item key={config.id} class="slds-size_4-of-12 slds-var-p-right_small">
                             <lightning-button
-                                class="button"
-                                label={labels.transfer}
+                                class={config.class}
+                                label={config.label}
                                 variant="brand"
-                                onclick={toggleFlow}
-                                disabled={transferDisabled}
-                                aria-expanded={transferExpanded}
+                                onclick={config.onclick}
+                                disabled={config.disabled}
+                                aria-expanded={config.expanded}
                             ></lightning-button>
-                        </template>
-                        <template lwc:else>
-                            <lightning-button
-                                class="button"
-                                label={labels.putBack}
-                                variant="brand"
-                                onclick={toggleFlow}
-                                disabled={putBackDisabled}
-                                aria-expanded={putBackExpanded}
-                            ></lightning-button>
-                        </template>
-                    </lightning-layout-item>
-                    <lightning-layout-item class="slds-size_4-of-12">
-                        <lightning-button
-                            class="redactButton"
-                            label={labels.setToRedaction}
-                            variant="brand"
-                            onclick={toggleFlow}
-                            aria-expanded={setToRedactionExpanded}
-                        ></lightning-button>
-                    </lightning-layout-item>
+                        </lightning-layout-item>
+                    </template>
                 </lightning-layout>
             </lightning-layout-item>
             <lightning-layout-item class="slds-size_12-of-12">
-                <template lwc:if={showReserve}>
-                    <div class="slds-var-m-top_xx-small">
-                        <lightning-card>
-                            <lightning-flow
-                                flow-api-name="Case_STO_Reserve_v_2"
-                                flow-input-variables={inputVariables}
-                                onstatuschange={handleFlowStatusChange}
-                            >
-                            </lightning-flow>
-                        </lightning-card>
-                    </div>
-                </template>
-                <template lwc:elseif={showPutBack}>
-                    <div class="slds-var-m-top_xx-small">
-                        <lightning-card>
-                            <lightning-flow
-                                flow-api-name="Case_STO_Put_Back"
-                                flow-input-variables={inputVariables}
-                                onstatuschange={handleFlowStatusChange}
-                            >
-                            </lightning-flow>
-                        </lightning-card>
-                    </div>
-                </template>
-                <template lwc:elseif={showTransfer}>
-                    <div class="slds-var-m-top_xx-small">
-                        <lightning-card>
-                            <lightning-flow
-                                flow-api-name="STO_Transfer_v_2"
-                                flow-input-variables={inputVariables}
-                                onstatuschange={handleFlowStatusChange}
-                            >
-                            </lightning-flow>
-                        </lightning-card>
-                    </div>
-                </template>
-                <template lwc:elseif={showRedact}>
-                    <div class="slds-var-m-top_xx-small">
-                        <lightning-card>
-                            <lightning-flow
-                                flow-api-name="Case_STO_Redact_v_2"
-                                flow-input-variables={inputVariables}
-                                onstatuschange={handleFlowStatusChange}
-                            >
-                            </lightning-flow>
-                        </lightning-card>
-                    </div>
+                <template for:each={topFlowConfigs} for:item="flowConfig">
+                    <template lwc:if={flowConfig.condition}>
+                        <div key={flowConfig.id} class="slds-var-m-top_xx-small">
+                            <lightning-card>
+                                <lightning-flow
+                                    flow-api-name={flowConfig.flowApiName}
+                                    flow-input-variables={inputVariables}
+                                    onstatuschange={handleFlowStatusChange}
+                                ></lightning-flow>
+                            </lightning-card>
+                        </div>
+                    </template>
                 </template>
             </lightning-layout-item>
         </lightning-layout>
-        <c-crm-sto-messaging-v-2
+        <c-crm-sto-messaging
             record-id={recordId}
             object-api-name={objectApiName}
             single-thread={singleThread}
             card-title={cardTitle}
             show-close={showClose}
             check-medskriv={checkMedskriv}
-            submit-button-label={submitButtonLabel}
+            submit-button-label={labels.SHARE_WITH_USER_LABEL}
             onsubmitfromparent={handleSubmit}
+            new-design
         >
             <div slot="buttonContainer">
                 <lightning-layout class="slds-float_right">
-                    <lightning-layout-item class="slds-var-p-right_small">
-                        <lightning-button
-                            label={labels.journal}
-                            data-id="journal"
-                            variant="brand-outline"
-                            onclick={toggleFlow}
-                            aria-expanded={journalExpanded}
-                        ></lightning-button>
-                    </lightning-layout-item>
-                    <lightning-layout-item class="slds-var-p-right_small">
-                        <lightning-button
-                            label={labels.createNavTask}
-                            data-id="createNavTask"
-                            variant="brand-outline"
-                            onclick={toggleFlow}
-                            aria-expanded={createNavTaskExpanded}
-                        ></lightning-button>
-                    </lightning-layout-item>
+                    <template for:each={bottomButtonConfigs} for:item="config">
+                        <lightning-layout-item key={config.id} class="slds-var-p-right_small">
+                            <lightning-button
+                                class={config.class}
+                                label={config.label}
+                                data-id={config.id}
+                                variant="brand-outline"
+                                onclick={config.onclick}
+                                aria-expanded={config.expanded}
+                            ></lightning-button>
+                        </lightning-layout-item>
+                    </template>
                 </lightning-layout>
             </div>
             <div slot="flowSection">
-                <template lwc:if={showComplete}>
-                    <lightning-card>
-                        <lightning-flow
-                            flow-api-name="Case_STO_Complete_v_2"
-                            flow-input-variables={inputVariables}
-                            onstatuschange={handleSubmitStatusChange}
-                        >
-                        </lightning-flow>
-                    </lightning-card>
-                </template>
-                <template lwc:elseif={showCreateNavTask}>
-                    <lightning-card>
-                        <lightning-flow
-                            flow-api-name="Case_STO_Send_NAV_Task_v_2"
-                            flow-input-variables={inputVariables}
-                            onstatuschange={handleFlowStatusChange}
-                        >
-                        </lightning-flow>
-                    </lightning-card>
-                </template>
-                <template lwc:elseif={showJournal}>
-                    <lightning-card>
-                        <lightning-flow
-                            flow-api-name="Case_STO_Journal_v_2"
-                            flow-input-variables={inputVariables}
-                            onstatuschange={handleFlowStatusChange}
-                        >
-                        </lightning-flow>
-                    </lightning-card>
-                </template>
-            </div>
-        </c-crm-sto-messaging-v-2>
-
-        <template lwc:if={showPanel}>
-            <div onkeyup={handleModalKey}>
-                <section
-                    role="dialog"
-                    tabindex="-1"
-                    aria-labelledby="modal-heading-01"
-                    aria-modal="true"
-                    aria-describedby="modal-content-id-1"
-                    class={panelClass}
-                >
-                    <div class="slds-modal__container">
-                        <header class="slds-is-relative">
-                            <div tabindex="0" class="firstfocusable" id="firstfocusable"></div>
-                            <button
-                                class="slds-button slds-button_icon slds-modal__close slds-button_icon-inverse"
-                                title="Close"
-                                id="focusElement"
-                                onclick={closeModal}
-                            >
-                                <lightning-icon icon-name="utility:close" variant="inverse" size="small">
-                                </lightning-icon>
-                                <span class="slds-assistive-text">Close</span>
-                            </button>
-                        </header>
-                        <div
-                            class="slds-modal__content slds-is-relative slds-var-p-around_medium"
-                            style="border-radius: 0.3em; overflow: visible"
-                            id="modal-content-id-1"
-                        >
-                            <lightning-flow onstatuschange={handleModalStatusChange}></lightning-flow>
+                <template for:each={bottomFlowConfigs} for:item="flowConfig">
+                    <template lwc:if={flowConfig.condition}>
+                        <div key={flowConfig.id}>
+                            <lightning-card>
+                                <lightning-flow
+                                    flow-api-name={flowConfig.flowApiName}
+                                    flow-input-variables={inputVariables}
+                                    onstatuschange={flowConfig.handleStatusChange}
+                                ></lightning-flow>
+                            </lightning-card>
                         </div>
-                    </div>
-                </section>
-                <div class="slds-backdrop slds-backdrop_open"></div>
-                <div tabindex="0" class="lastfocusable"></div>
+                    </template>
+                </template>
             </div>
-        </template>
+        </c-crm-sto-messaging>
     </div>
 </template>
