--- a/force-app/main/default/lwc/stoRegisterThread/stoRegisterThread.html
+++ b/force-app/main/default/lwc/stoRegisterThread/stoRegisterThread.html
@@ -192,7 +192,7 @@
         </div>
         <c-alertdialog
             header="Noe gikk galt"
-            content="Vennligst oppdater siden og prøv på nytt."
+            content="Vennligst oppdater siden og prøv på nytt"
             desktop-style="text-align: center; width: 50%;"
             mobile-style="text-align: center; max-width: 100%;"
             center-buttons="true"
