--- a/force-app/main/default/lwc/stoMessagingContainer/stoMessagingContainer.html
+++ b/force-app/main/default/lwc/stoMessagingContainer/stoMessagingContainer.html
@@ -1,8 +1,8 @@
 <template>
     <div
-        class="slds-card slds-theme_default slds-var-p-horizontal_medium slds-var-p-bottom_medium slds-var-p-top_xx-large"
+        class="slds-card slds-theme_default slds-var-p-horizontal_medium slds-var-p-bottom_medium slds-var-p-top_large"
     >
-        <lightning-layout class="slds-var-p-bottom_xx-large slds-border_bottom border" multiple-rows="true" size="12">
+        <lightning-layout class="slds-var-p-bottom_large" multiple-rows="true" size="12">
             <lightning-layout-item class="slds-size_12-of-12">
                 <lightning-layout>
                     <template for:each={topButtonConfigs} for:item="config">
