changed top buttons color

--- a/force-app/main/default/lwc/stoMessagingContainer/stoMessagingContainer.html
+++ b/force-app/main/default/lwc/stoMessagingContainer/stoMessagingContainer.html
@@ -11,7 +11,7 @@
                             class="slds-size_4-of-12 slds-var-p-right_medium flowButton"
                         >
                             <lightning-button
-                                class={config.class}
+                                class="button"
                                 label={config.label}
                                 variant="brand"
                                 onclick={config.onclick}
