--- a/force-app/main/default/lwc/crmStoMessaging/oldDesignTemplate.html
+++ b/force-app/main/default/lwc/crmStoMessaging/oldDesignTemplate.html
@@ -1,5 +1,9 @@
 <template>
+    <lightning-layout lwc:if={isThreadIdNull} class="threadNotFound">
+        <lightning-layout-item> Du har ikke tilgang til dialogen </lightning-layout-item>
+    </lightning-layout>
     <c-crm-messaging-message-component
+        lwc:else
         tabindex="0"
         record-id={threadId}
         single-thread={singleThread}
