added notifications to sto

--- a/force-app/main/default/lwc/stoMessagingContainer/stoMessagingContainer.html
+++ b/force-app/main/default/lwc/stoMessagingContainer/stoMessagingContainer.html
@@ -85,5 +85,6 @@
                 </template>
             </div>
         </c-crm-sto-messaging>
+        <c-nks-notification-box></c-nks-notification-box>
     </div>
 </template>
