fixed button style on smaller screen

--- a/force-app/main/default/lwc/crmStoMessaging/newDesignTemplate.html
+++ b/force-app/main/default/lwc/crmStoMessaging/newDesignTemplate.html
@@ -17,6 +17,7 @@
         submit-button-label={submitButtonLabel}
         onsubmitfromchild={handleSubmit}
         new-design
+        is-thread={isThread}
     >
         <template lwc:if={showMedskrivBlocker}>
             <div slot="messages">
