--- a/force-app/main/default/lwc/stoMessagingContainer/stoMessagingContainer.html
+++ b/force-app/main/default/lwc/stoMessagingContainer/stoMessagingContainer.html
@@ -8,7 +8,7 @@
                     <template for:each={topButtonConfigs} for:item="config">
                         <lightning-layout-item
                             key={config.id}
-                            class="slds-size_4-of-12 slds-var-p-right_medium flowButton"
+                            class="slds-size_4-of-12 slds-var-p-right_medium flow-button"
                         >
                             <button
                                 class={topButtonStyle}
