--- a/force-app/main/default/lwc/stoMessagingContainer/stoMessagingContainer.html
+++ b/force-app/main/default/lwc/stoMessagingContainer/stoMessagingContainer.html
@@ -63,6 +63,7 @@
                                 data-id={config.id}
                                 onclick={config.onclick}
                                 aria-expanded={config.expanded}
+                                type="button"
                             >
                                 {config.label}
                             </button>
