Refresh fields from apex on closed

--- a/force-app/main/default/lwc/crmStoMessaging/newDesignTemplate.html
+++ b/force-app/main/default/lwc/crmStoMessaging/newDesignTemplate.html
@@ -18,6 +18,7 @@
         onsubmitfromchild={handleSubmit}
         new-design
         is-thread={isThread}
+        onclosedevent={forwardEvent}
     >
         <template lwc:if={showMedskrivBlocker}>
             <div slot="messages">
