--- a/force-app/main/default/lwc/stoMessagingContainer/stoMessagingContainer.html
+++ b/force-app/main/default/lwc/stoMessagingContainer/stoMessagingContainer.html
@@ -47,6 +47,7 @@
             check-medskriv={checkMedskriv}
             submit-button-label={labels.SHARE_WITH_USER_LABEL}
             onsubmitfromparent={handleSubmit}
+            onclosedevent={handleClosed}
             new-design
             is-thread={isThread}
         >
