--- a/force-app/main/default/lwc/stoMessagingContainer/stoMessagingContainer.html
+++ b/force-app/main/default/lwc/stoMessagingContainer/stoMessagingContainer.html
@@ -59,6 +59,7 @@
                                 button-styling="secondary"
                                 onclick={config.onclick}
                                 aria-expanded={config.expanded}
+                                element-data-id={config.id}
                             ></c-nks-button>
                         </lightning-layout-item>
                     </template>
