changes to textTemplate

--- a/force-app/main/default/lwc/crmStoMessaging/oldDesignTemplate.html
+++ b/force-app/main/default/lwc/crmStoMessaging/oldDesignTemplate.html
@@ -14,6 +14,7 @@
         onenglisheventtwo={handleEnglishEventTwo}
         class={computeClasses}
         show-quick
+        show-language-change-modal={showLanguageChangeModal}
     >
         <c-crm-sto-messaging-toolbar slot="toolbar" object-api-name={objectApiName}></c-crm-sto-messaging-toolbar>
         <template lwc:if={showMedskrivBlocker}>
