Use full height on custom top buttons

--- a/force-app/main/default/lwc/stoMessagingContainer/stoMessagingContainer.html
+++ b/force-app/main/default/lwc/stoMessagingContainer/stoMessagingContainer.html
@@ -16,6 +16,7 @@
                                 disabled={config.disabled}
                                 aria-expanded={config.expanded}
                                 button-label={config.label}
+                                full-height
                             ></c-nks-button>
                         </lightning-layout-item>
                     </template>
