--- a/force-app/main/default/lwc/stoMessagingContainer/stoMessagingContainer.html
+++ b/force-app/main/default/lwc/stoMessagingContainer/stoMessagingContainer.html
@@ -61,6 +61,7 @@
                                 onclick={config.onclick}
                                 aria-expanded={config.expanded}
                                 element-data-id={config.id}
+                                full-height
                             ></c-nks-button>
                         </lightning-layout-item>
                     </template>
